# Shadow-Stellar

./: README.md  ZK-IMPLEMENTATION.md
Shadow-Stellar/collective-commitment-protocol/: Cargo.toml
Shadow-Stellar/collective-commitment-protocol/src/: integration_tests.rs  lib.rs  storage.rs  storage_types.rs  tests.rs  types.rs  utils.rs
Shadow-Stellar/collective-commitment-protocol/src/zk/: field.rs  mod.rs  pedersen.rs  proof.rs  verifier.rs
Shadow-Stellar/collective-commitment-protocol/test_snapshots/tests/: test_cancel_active_vault.1.json  test_cancel_after_deadline.1.json  test_cancel_before_deadline.1.json  test_claim_pool_after_early_exit.1.json  test_claim_pool_double.1.json  test_claim_pool_exited_member.1.json  test_claim_pool_wrong_state.1.json  test_create_vault_penalty_success.1.json  test_create_vault_success.1.json  test_create_vault_too_few_members.1.json  test_create_vault_too_many_members.1.json  test_create_vault_unsupported_token.1.json  test_create_vault_zero_amount.1.json  test_creator_and_member_index.1.json  test_deposit_after_deadline.1.json  test_deposit_all_members_activates_vault.1.json  test_deposit_double.1.json  test_deposit_partial_stays_funding_open.1.json  test_get_member_state_not_member.1.json  test_get_pool_balance.1.json  test_get_vaults_by_creator_empty.1.json  test_vault_resolves_after_all_claims.1.json  test_withdraw_double.1.json  test_withdraw_early_penalty.1.json  test_withdraw_early_strict.1.json  test_withdraw_mature.1.json  test_withdraw_non_member.1.json  (+1 more)
Shadow-Stellar/crates/ultrahonk-soroban-verifier/: Cargo.toml
(+155 files in other folders)
